--- a/style.scss
+++ b/style.scss
@@ -190,7 +190,12 @@ footer {
   min-width: 200px;
   z-index: 2;
 
-  @media (max-width:991px) {
+    @media (max-width:991px) {
+    width: 60%;
+    max-width: 60%;
+    max-width: 500px;
+  }
+    @media (max-width:600px) {
     width: 80%;
     max-width: 80%;
     max-width: 500px;
@@ -205,11 +210,19 @@ footer {
   max-width: 28%;
   z-index: 3;
 
-  @media (max-width:991px) {
+   @media (max-width:991px) {
    bottom: 60%;
    width: 40%;
    max-width: 40%;
   }
+
+    @media (max-width:600px) {
+    bottom: 60%;
+    width: 45%;
+    max-width: 45%;
+  }
+
+
 }
 .hero-content {
   position: relative;
@@ -693,6 +706,21 @@ footer {
 
 @media (min-width: 991px) {
   .tab-dropdown-wrapper {
+    display: none !important;
+  }
+}
+
+// Hero Animation Control Button: Only show on mobile
+#heroAnimControlBtn {
+  display: inline-block;
+  position: absolute;
+  bottom: 20px;
+  left: 50%;
+  transform: translateX(-50%);
+  z-index: 10;
+}
+@media (min-width: 992px) {
+  #heroAnimControlBtn {
     display: none !important;
   }
 }
