--- a/style.scss
+++ b/style.scss
@@ -112,6 +112,10 @@ h1, h2, h3, h4, h5, h6,
   color: $white;
   font-size: 2rem;
   z-index: 1;
+
+  @media (max-width: 1025px) {
+    min-height: 400px;
+  }
 }
 .banner-section {
   background: $primary-blue;
@@ -166,7 +170,7 @@ footer {
    @media (max-width:1025px) {
     width: 100%;
     max-width: 100%;
-    max-width: 800px;
+    max-width: 700px;
   }
 }
 .hero-bubble-left {
@@ -189,7 +193,7 @@ footer {
     min-width: 180px;
   }
   @media (max-width:1025px) {
-      bottom: 50%;
+      bottom: 55%;
       width: 30%;
   }
 
@@ -204,7 +208,7 @@ footer {
   z-index: 2;
 
     @media (max-width:1025px) {
-    width: 60%;
+    width: 50%;
     max-width: 60%;
     max-width: 550px;
   }
@@ -776,6 +780,9 @@ footer {
   will-change: transform;
   pointer-events: none;
   z-index: 1;
+  @media (max-width: 1025px) {
+    bottom: 0%;
+  }
 }
 
 // Add styles for parallax-img-2
@@ -792,8 +799,8 @@ footer {
   z-index: 2;
 
   @media (max-width: 1200px) {
-    right: -10%;
-    top: 30%;
+    right: -20%;
+    top: 10%;
     width: 35%;
     max-width: 250px;
     min-width: 150px;
@@ -980,6 +987,7 @@ footer {
 .footer-accordion {
   .accordion-item{
     background: none !important;
+    border: none !important;
 
     &:hover{
       background: none !important;
