--- a/style.scss
+++ b/style.scss
@@ -248,7 +248,24 @@ footer {
   display: flex;
   flex-direction: column;
   justify-content: flex-end;
+  align-items: center;
   padding: 0;
+}
+
+.hero-desktop-img {
+  width: 130%;
+  height: auto;
+  max-width: 1600px;
+  object-fit: contain;
+  object-position: center bottom;
+}
+
+.hero-mobile-img {
+  width: 100%;
+  height: 100%;
+  max-height: 800px;
+  object-fit: contain;
+  object-position: right bottom;
 }
 .hero-title {
   font-size: 60px;
