--- a/style.scss
+++ b/style.scss
@@ -249,7 +249,7 @@ footer {
   flex-direction: column;
   justify-content: flex-end;
   align-items: center;
-  padding: 0;
+  padding: 0 !important;
 }
 
 .hero-desktop-img {
