--- a/style.scss
+++ b/style.scss
@@ -255,6 +255,7 @@ footer {
 .hero-desktop-img {
   width: 130%;
   height: auto;
+  max-height: 100vh;
   max-width: 1600px;
   object-fit: contain;
   object-position: center bottom;
